style: fix alignment of footer icons

--- a/themes/simple-papaya/sass/base.scss
+++ b/themes/simple-papaya/sass/base.scss
@@ -510,6 +510,8 @@ footer {
 /* Icons */
 
 .icons {
+    padding: 0;
+
     a {
         padding: 0 6px 0 6px;
         color: var(--icon-color);
